--- a/capstone-notebook.ipynb
+++ b/capstone-notebook.ipynb
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +870,7 @@
        "[476 rows x 203 columns]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +893,7 @@
        "Name: POSTSEASON_Champions, dtype: int64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +915,7 @@
        "Name: POSTSEASON_R68, dtype: int64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,18 +926,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Split the data into target and predictors\n",
-    "y = data_copy['POSTSEASON_Champions']\n",
-    "X = data_copy.drop(columns=['POSTSEASON_Champions'], axis=1)"
+    "y = data['POSTSEASON_Champions']\n",
+    "X = data.drop(columns=['POSTSEASON_Champions'], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -947,23 +947,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LogisticRegression(C=1000000000000.0, fit_intercept=False, solver='liblinear')"
+       "LogisticRegression(C=1e+16, fit_intercept=False, solver='liblinear')"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Instantiate the model\n",
-    "logreg = LogisticRegression(fit_intercept = False, C=1e12, solver='liblinear')\n",
+    "logreg = LogisticRegression(fit_intercept = False, C=1e16, solver='liblinear')\n",
     "\n",
     "# Fit the model\n",
     "logreg.fit(X_train,  y_train)"
@@ -971,18 +971,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Generate predictions\n",
     "y_hat_train = logreg.predict(X_train)\n",
-    "y_hat_test = logreg.predict"
+    "y_hat_test = logreg.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1001,8 +1001,33 @@
     "residuals = np.abs(y_train - y_hat_train)\n",
     "print(pd.Series(residuals).value_counts())\n",
     "print('------------------------------------')\n",
-    "print(pd.Series(residuals).value_counts(normalize=True))\n",
-    "# 194 correct, ~ 85% accuracy"
+    "print(pd.Series(residuals).value_counts(normalize=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    116\n",
+      "1      3\n",
+      "Name: POSTSEASON_Champions, dtype: int64\n",
+      "------------------------------------\n",
+      "0    0.97479\n",
+      "1    0.02521\n",
+      "Name: POSTSEASON_Champions, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "residuals = np.abs(y_test - y_hat_test)\n",
+    "print(pd.Series(residuals).value_counts())\n",
+    "print('------------------------------------')\n",
+    "print(pd.Series(residuals).value_counts(normalize=True))"
    ]
   }
  ],
